--- a/ExamenJavierLopez/AndroidManifest.xml
+++ b/ExamenJavierLopez/AndroidManifest.xml
@@ -22,6 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.example.examenjavierlopez.Dibujito"
+            android:label="@string/Casita" >
+        </activity>
+        
     </application>
 
 </manifest>
